fixing body spacing

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -34,7 +34,115 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    border: none;
+    border: none;/* Variables */
+    :root {
+      /* Font settings */
+      font-family: 'Archivo', Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+      line-height: 1.5;
+      font-weight: 400;
+      height: 100%;
+    
+       /*Font adjustment*/
+       font-synthesis: none;
+       text-rendering: optimizeLegibility;
+       -webkit-font-smoothing: antialiased;
+       -moz-osx-font-smoothing: grayscale;
+       -webkit-text-size-adjust: 100%;
+    
+      --blue: #282fcf;
+      --green: #23ad2f;
+      --yellow: #F4FC40;
+      --sliver: #F9F9F9;
+      --light: #fff;
+      --color-1: #fafeff;
+      --color-2: #00c1ec;
+      --color-3: #e7f7fe;
+      --color-4: rgb(141, 141, 141);
+      --black: rgb(40, 40, 40);
+      --red: rgb(253, 87, 87);
+    }
+    a {
+      font-weight: 500;
+      color: #000000;
+      text-decoration: inherit;
+      list-style-type: none;
+    }
+    a:hover {
+      color: #535bf2;
+    } 
+    
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      list-style-type: none;
+      outline: none;
+      border: none;
+      text-decoration: none;
+    }
+    
+    html { 
+      scroll-behavior: unset;
+    }
+    
+    body {
+      height: 100%;
+      background-color: var(--color-1);
+      color: var(--black);
+      overflow-x: hidden;
+    }
+    
+    @media screen and (max-width: 430px){
+      body {
+        position: relative;
+        max-width: 100vw;
+        overflow-y: initial;
+      }
+    }
+    
+    main {
+      position: relative;
+    }
+    
+    .elt {
+      margin: 0 auto;
+    }
+    
+     /* MOUSE */
+     .cursor {
+      width: 62px;
+      height: 62px;
+      border: 1px solid teal;
+      border-radius: 50%;
+      position: absolute;
+      transform: translate(-50%, -50%);
+      pointer-events: none;
+      transition: 500ms ease-out;
+      z-index: 2;
+      backdrop-filter: brightness(115%);
+    }
+    .cursor.hovered {
+      width: 30px;
+      height: 30px;
+    }
+    .wrapper {
+      display: flex;
+      flex-flow: row wrap;
+      text-align: center;
+      position: relative;
+    
+    }
+    .wrapper>* {
+      padding: 10px;
+      margin: 10px;
+      flex: 1 100%;
+      border-radius: 10px;
+      -webkit-border-radius: 10px;
+      -moz-border-radius: 10px;
+      -ms-border-radius: 10px;
+      -o-border-radius: 10px;
+    }
+    
   }
   
   body {
